show users from firebase database in new message activity

--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -7,4 +7,13 @@
     android:layout_height="match_parent"
     tools:context=".NewMessageActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview_newmessage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </android.support.constraint.ConstraintLayout>
