--- a/app/src/main/res/layout/activity_latest_messages.xml
+++ b/app/src/main/res/layout/activity_latest_messages.xml
@@ -5,6 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LatestMessagesActivity">
+    tools:context=".messages.LatestMessagesActivity">
 
 </android.support.constraint.ConstraintLayout>
