--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewMessageActivity">
+    tools:context=".messages.NewMessageActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_newmessage"
