--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -46,16 +46,16 @@
             app:layout_constraintTop_toBottomOf="@+id/name_edittext_register"/>
 
         <!--<ProgressBar-->
-            <!--android:id="@+id/loading"-->
-            <!--android:layout_width="48dp"-->
-            <!--android:layout_height="48dp"-->
-            <!--android:layout_marginBottom="8dp"-->
-            <!--android:indeterminate="true"-->
-            <!--android:visibility="visible"-->
-            <!--app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintHorizontal_bias="0.526"-->
-            <!--app:layout_constraintStart_toStartOf="parent"/>-->
+        <!--android:id="@+id/loading"-->
+        <!--android:layout_width="48dp"-->
+        <!--android:layout_height="48dp"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:indeterminate="true"-->
+        <!--android:visibility="visible"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.526"-->
+        <!--app:layout_constraintStart_toStartOf="parent"/>-->
 
         <EditText
             android:id="@+id/password_edittext_register"
@@ -73,16 +73,18 @@
 
         <Button
             android:id="@+id/register_button_register"
+            style="?android:attr/borderlessButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/rounded_button"
-            android:text="Register"
+            android:text="REGISTER"
             android:textColor="@android:color/white"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"
             app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
             app:layout_constraintTop_toBottomOf="@+id/password_edittext_register"/>
+
 
         <TextView
             android:id="@+id/already_have_account_text_view"
@@ -97,6 +99,22 @@
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="@+id/register_button_register"
+            app:layout_constraintStart_toStartOf="@+id/register_button_register"
+            app:layout_constraintTop_toBottomOf="@+id/register_button_register"/>
+
+        <com.wang.avi.AVLoadingIndicatorView
+            android:id="@+id/loading_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="20dp"
+            android:visibility="gone"
+            app:indicatorColor="@color/colorAccent"
+            app:indicatorName="PacmanIndicator"
             app:layout_constraintEnd_toEndOf="@+id/register_button_register"
             app:layout_constraintStart_toStartOf="@+id/register_button_register"
             app:layout_constraintTop_toBottomOf="@+id/register_button_register"/>
