--- a/app/src/main/res/layout/user_row_new_message.xml
+++ b/app/src/main/res/layout/user_row_new_message.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:src="@drawable/ic_person_black_24dp"
+        android:src="@drawable/no_image2"
         android:backgroundTint="@android:color/darker_gray"
         app:civ_fill_color="@android:color/darker_gray"
         app:civ_circle_background_color="@android:color/darker_gray"
