added chat bubbles for incoming and outgoing messages

--- a/app/src/main/res/layout/chat_from_row.xml
+++ b/app/src/main/res/layout/chat_from_row.xml
@@ -12,9 +12,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="This is my message that will wrap into multiple lines and keep going"
-        android:background="@drawable/rounded_edittext_register_login"
-        android:padding="16dp"
+        android:background="@drawable/shape_bg_incoming_bubble"
+        android:paddingStart="20dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="8dp"
+        android:textColor="@android:color/black"
+        android:paddingBottom="8dp"
         android:maxWidth="240dp"
         app:layout_constraintStart_toEndOf="@+id/imageview_chat_from_row"
         app:layout_constraintTop_toTopOf="@+id/imageview_chat_from_row"/>
