--- a/app/src/main/res/layout/chat_from_row.xml
+++ b/app/src/main/res/layout/chat_from_row.xml
@@ -24,6 +24,19 @@
         app:layout_constraintStart_toEndOf="@+id/imageview_chat_from_row"
         app:layout_constraintTop_toTopOf="@+id/imageview_chat_from_row"/>
 
+    <TextView
+        android:id="@+id/from_msg_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:paddingEnd="20dp"
+        android:paddingStart="20dp"
+        android:text="16 Sep, 2:05 PM"
+        android:textSize="11sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textview_from_row"
+        app:layout_constraintTop_toBottomOf="@+id/textview_from_row"/>
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageview_chat_from_row"
         android:layout_width="50dp"
