--- a/app/src/main/res/layout/chat_to_row.xml
+++ b/app/src/main/res/layout/chat_to_row.xml
@@ -24,6 +24,18 @@
         app:layout_constraintEnd_toStartOf="@+id/imageview_chat_to_row"
         app:layout_constraintTop_toTopOf="@+id/imageview_chat_to_row"/>
 
+    <TextView
+        android:id="@+id/to_msg_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="4dp"
+        android:text="16 Sep, 2:05 PM"
+        android:textSize="11sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textview_to_row"
+        app:layout_constraintTop_toBottomOf="@+id/textview_to_row"/>
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageview_chat_to_row"
         android:layout_width="50dp"
