--- a/app/src/main/res/layout/latest_message_row.xml
+++ b/app/src/main/res/layout/latest_message_row.xml
@@ -47,6 +47,20 @@
         app:layout_constraintStart_toEndOf="@+id/imageview_latest_message"
         app:layout_constraintTop_toBottomOf="@+id/username_textview_latest_message"/>
 
+
+    <TextView
+        android:id="@+id/latest_msg_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="16dp"
+        tools:text="16 Sep, 2:05 PM"
+        android:textSize="11sp"
+        app:layout_constraintBottom_toBottomOf="@+id/username_textview_latest_message"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/username_textview_latest_message"/>
+
+
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
