made some design changes

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,12 +9,12 @@
 
     <ImageView
         android:id="@+id/kotlinImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="265dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="2dp"
-        android:src="@drawable/kotlin_android"
+        android:layout_marginTop="30dp"
+        android:background="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -23,20 +23,18 @@
         android:id="@+id/email_edittext_login"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="160dp"
         android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/rounded_edittext_register_login"
         android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:paddingLeft="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/kotlinImageView"/>
+        app:layout_constraintTop_toBottomOf="@+id/kotlinImageView"/>
 
     <EditText
         android:id="@+id/password_edittext_login"
