--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        tools:context=".registerlogin.RegisterActivity">
+        tools:context=".ui.register.RegisterActivity">
 
         <EditText
             android:id="@+id/name_edittext_register"
