showing full image on clicking the image instead of entire row

--- a/app/src/main/res/layout/image_dialog_layout.xml
+++ b/app/src/main/res/layout/image_dialog_layout.xml
@@ -8,13 +8,13 @@
 
     <ImageView
         android:id="@+id/bigImageView"
-        android:layout_width="290dp"
-        android:layout_height="290dp"
+        android:layout_width="260dp"
+        android:layout_height="260dp"
         android:scaleType="centerCrop"
-        tools:src="@drawable/kotlin_android"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/kotlin_android"/>
 </android.support.constraint.ConstraintLayout>
