migrated to AndroidX and updated dependencies

--- a/app/src/main/res/layout/abs_layout.xml
+++ b/app/src/main/res/layout/abs_layout.xml
@@ -4,7 +4,7 @@
               android:layout_height="wrap_content"
               android:orientation="vertical">
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvTitle"
         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
         android:layout_width="wrap_content"
